# nermana_ai2

./: .gitattributes  .gitignore  README.md  config.termux.example.json  pyproject.toml  requirements.txt
nermana/: __init__.py  agent.py  capabilities.py  cli.py  config.py  core_knowledge.py  http_client.py  memory.py  model_downloads.py  models.py  safety.py  self_learning.py  server.py  simple_server.py  startup.py  telegram_bot.py  tooling.py  updater.py
nermana/tools/: __init__.py  files.py  media.py  phone.py  search.py  weather.py
nermana/web/static/: app.js  index.html  styles.css
scripts/: termux_llama_server.sh  termux_setup.sh  termux_start.sh  termux_start_all.sh  termux_update.sh
tests/: test_core.py
