[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nermana"
version = "0.1.0"
description = "Offline-first Termux AI agent with configurable local models and tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "websockets>=12",
]

[project.optional-dependencies]
pdf = ["pypdf>=4"]

[project.scripts]
nermana = "nermana.cli:main"

[tool.setuptools.packages.find]
include = ["nermana*"]

[tool.setuptools.package-data]
nermana = ["web/static/*"]
